templates/jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - image: docker.m.daocloud.io/jaegertracing/all-in-one:latest
          name: jaeger
          ports:
            - containerPort: 16686
              protocol: TCP
            - containerPort: 4317
              protocol: TCP
            - containerPort: 4318
              protocol: TCP
      restartPolicy: Always
