templates/facade-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facade-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - facade.kl.suyiiyii.top
      secretName: facade-tls
  rules:
    - host: facade.kl.suyiiyii.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: facade
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facade-http-ingress
spec:
  rules:
    - host: facade.kl.suyiiyii.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: facade
                port:
                  number: 8080
