templates/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - jaeger.kl.suyiiyii.top
      secretName: jaeger-tls
  rules:
    - host: jaeger.kl.suyiiyii.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-http-ingress
spec:
  rules:
    - host: jaeger.kl.suyiiyii.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
